# pickgauge

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  codex-claude-usage-tray-implementation-plan.md  eslint.config.js  index.html  package-lock.json  package.json  pickforge.release.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md
docs/: usage-json.md
docs/architecture/: browser-automation-spike.md  provider-refresh-lifecycle.md  web-provider-parser-contract.md
docs/discovery/: local-provider-data-shapes.md
scripts/: capture-preview-screenshots.mjs  check-osv-severity.mjs  collect-smoke-preflight.mjs  install-desktop-integration  install.sh  prepare-playwright-sidecar.mjs  validate-browser-preview.mjs  validate-headless-appimage.mjs  validate-kde-tray-registration.mjs  validate-playwright-auth-profile-helper.mjs  validate-playwright-authenticated-profile.mjs  validate-playwright-official-fail-closed.mjs  validate-playwright-sidecar-launch.mjs  validate-playwright-sidecar-package.mjs  validate-playwright-synthetic-fail-closed.mjs
src/: App.svelte  Float.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/binaries/: forgegauge-playwright-sidecar-x86_64-unknown-linux-gnu  pickgauge-playwright-sidecar-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_profile.rs  browser_session.rs  cli_provider.rs  config.rs  history.rs  kwin.rs  lib.rs  local_provider.rs  main.rs  observation_reuse.rs  official_reading.rs  ollama_provider.rs  refresh_publication.rs  sidecar.rs  snapshot_store.rs  sounds.rs  usage.rs  usage_cli.rs  usage_model.rs  web_provider.rs
src-tauri/tests/: headless_cli.rs
src-tauri/tests/fixtures/: usage-cli-v1.json
src-tauri/tests/fixtures/claude-local/projects/project-a/: session.jsonl
src-tauri/tests/fixtures/codex-local/: sanitized-state.sql
src-tauri/tests/fixtures/grok-cli/: subscriptions-success.json
src-tauri/tests/fixtures/web-visible/: captcha.json  claude-success.json  codex-success.json  grok-success.json  logged-out.json  mfa-required.json  network-unavailable.json  parse-failure.json  partial-visible.json  timed-out.json  unexpected-ui.json  unsanitized-field.json
src/lib/: api.test.ts  (+18 more)
tests/: check-osv-severity.node-test.mjs  headless-appimage-validator-smoke.mjs  install-script-smoke.mjs
(+31 files in other folders)
