[package]
name = "forgegauge"
version = "0.1.0"
description = "The Pickforge AI usage tray for Codex and Claude Code."
authors = ["Pickforge"]
edition = "2021"
license = "MIT"

[lib]
name = "forgegauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forgegauge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
