[package]
name = "pickgauge"
version = "0.1.0"
description = "The Pickforge AI usage tray for Codex and Claude Code."
authors = ["Pickforge"]
edition = "2021"
license = "MIT"

[lib]
name = "pickgauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pickgauge"
path = "src/main.rs"

[features]
# Required for production builds: serves the embedded frontend instead of the
# dev server URL. The tauri CLI enables it for `tauri build`; enable it
# manually when building with plain cargo.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dpi = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rusqlite = { version = "0.40.0", features = ["bundled"] }
tauri = { version = "2", features = ["image-png", "tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
time = { version = "0.3", features = ["formatting"] }

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
